2015-09-30 Albert Chu <chu11@llnl.gov>

	Merge branch intel2600v3.

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h: Add
	Intel product id's for S2600KP, S2600WT2, S2600WTT.

	* libfreeipmi/sel/ipmi-sel-string-intel.c: Support Intel Node
	Manager SEL events on Intel S2600KP, S2600WT2, S2600WTT.

	* libfreeipmi/include/freeipmi/spec/ipmi-sensor-numbers-oem-spec.h:
	Add sensor numbers for Intel S2600KP, S2600WT2, S2600WTT.

	* libfreeipmi/include/freeipmi/spec/ipmi-slave-address-oem-spec.h:
	Add slave addresses for Intel S2600KP, S2600WT2, S2600WTT.

	* libfreeipmi/include/freeipmi/spec/ipmi-sensor-and-event-code-tables-oem-spec.h,
	libfreeipmi/sel/ipmi-sel-string-intel.c: Support OEM sel events
	for Intel S2600KP, S2600WT2, S2600WTT.

	* man/ipmi-sel.8.pre.in: Update motherboard support list.
	
2015-10-14 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-spec.c:
	Fix typo taret -> target.

2015-10-14 Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Update get-power-supply-status2 on Supermicro based
	on mailing list discussion.

2015-09-30 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-slave-address-spec.h,
	libfreeipmi/include/freeipmi/record-format/ipmi-sel-oem-record-format.h,
	libfreeipmi/sel/ipmi-sel-string.c,
	libfreeipmi/sel/ipmi-sel-string-linux-kernel.h,
	libfreeipmi/sel/ipmi-sel-string-linux-kernel.c: Support Linux
	kernel panics in SEL.

2015-09-29 Newell Jensen <newell.jensen@gmail.com>

	* ipmi-locate/ipmi-locate.c (main),
	libfreeipmi/locate/ipmi-locate-smbios.c (ipmi_locate_smbios_get_device_info),
	libfreeipmi/locate/ipmi-locate-acpi-spmi.c (ipmi_locate_acpi_spmi_get_device_info),
	libfreeipmi/locate/ipmi-locate-dmidecode.c (ipmi_locate_dmidecode_get_device_info):
	Fix ipmi locate probing on arm32 & arm64.

2015-09-24 Newell Jensen <newell.jensen@gmail.com>

	* ipmi-locate/ipmi-locate.c (main): Fix probing issue on arm32 & arm64
	systems.
	
2015-09-23 Albert Chu <chu11@llnl.gov>
